// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnatomogramContainer Should match existing snapshot. 1`] = `
<div
  className="anatomogram-container"
>
  <defaultProps(withPropsOnChange(onlyUpdateForPropTypes(defaultProps(defaultProps(mapProps(Anatomogram))))))
    atlasUrl=""
    highlightColour="yellow"
    highlightIds={Array []}
    highlightOpacity={0.4}
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    selectColour="ffaa00"
    selectIds={Array []}
    selectOpacity={0.4}
    showColour="grey"
    showIds={
      Array [
        "UBERON_0000178",
        "UBERON_0000473",
        "UBERON_0000955",
        "UBERON_0000977",
      ]
    }
    showOpacity={0.4}
    species="homo_sapiens"
  />
</div>
`;

exports[`AnatomogramContainer Should update when the context changes. 1`] = `
<div
  className="anatomogram-container"
>
  <defaultProps(withPropsOnChange(onlyUpdateForPropTypes(defaultProps(defaultProps(mapProps(Anatomogram))))))
    atlasUrl=""
    highlightColour="yellow"
    highlightIds={Array []}
    highlightOpacity={0.4}
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    selectColour="ffaa00"
    selectIds={
      Array [
        "UBERON_0000977",
      ]
    }
    selectOpacity={0.4}
    showColour="grey"
    showIds={
      Array [
        "UBERON_0000178",
        "UBERON_0000473",
        "UBERON_0000955",
        "UBERON_0000977",
      ]
    }
    showOpacity={0.4}
    species="homo_sapiens"
  />
</div>
`;
